making a eureka microservice and connecting the user service to it

--- a/Backend - Spring MicroServices/common_ground/user-service/src/main/resources/application.yml
+++ b/Backend - Spring MicroServices/common_ground/user-service/src/main/resources/application.yml
@@ -7,7 +7,13 @@ spring:
         jwt:
           issuer-uri : http://localhost:7080/realms/common-ground
 server:
-  port: 6700
+  port: 0
+
+eureka:
+  client:
+    fetch-registry: true
+    serviceUrl:
+      defaultZone: http://localhost:8888/eureka
 
 app:
   keycloak:
