--- a/Backend - Spring MicroServices/common_ground/discovery-server/src/main/resources/application.yml
+++ b/Backend - Spring MicroServices/common_ground/discovery-server/src/main/resources/application.yml
@@ -1,9 +1,5 @@
-eureka:
-  instance:
-    hostname: localhost
-  client:
-    register-with-eureka: false
-    fetch-registry: false
-
-server:
-  port: 8888
+spring:
+  application:
+    name: discovery-server
+  config:
+    import: optional:configserver:http://localhost:8888
