--- a/Backend - Spring MicroServices/common_ground/config-server/src/main/resources/config/api-gateway.yml
+++ b/Backend - Spring MicroServices/common_ground/config-server/src/main/resources/config/api-gateway.yml
@@ -6,3 +6,20 @@ eureka:
     fetch-registry: true
     serviceUrl:
       defaultZone: http://localhost:8761/eureka
+
+spring:
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: http://localhost:7080/realms/common-ground
+  cloud:
+    gateway:
+      discovery:
+        locator:
+          enabled: true
+      routes:
+        - id: user-service
+          uri: lb:http://USER-SERVICE
+          predicates:
+            - Path=/api/v1/users/**
