--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -11,6 +11,7 @@ services:
       - ./postgres_common_ground:/var/lib/postgresql/data
     networks:
       - keycloak-network-common_ground
+    restart: unless-stopped   
     ports:
       - "5432:5432"
     healthcheck:
@@ -19,7 +20,7 @@ services:
       retries: 5
       start_period: 30s
       timeout: 10s
-
+  
   keycloak:
     image: quay.io/keycloak/keycloak:26.0.2
     container_name: keycloak_common_ground
@@ -52,6 +53,34 @@ services:
         condition: service_healthy
     networks:
       - keycloak-network-common_ground
+  
+  pgadmin:
+    container_name: common_ground_pgadmin
+    image: dpage/pgadmin4
+    environment:
+      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL:-pgadmin@pgadmin.org}
+      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD:-admin}
+      PGADMIN_CONFIG_SERVER_MODE: 'False'
+    volumes: 
+      - pgadmin:/var/lib/pgadmin
+    ports:
+      - 5050:80
+    networks:
+      - keycloak-network-common_ground
+  
+  mail-dev:
+    container_name: mail_dev_common_ground
+    image: maildev/maildev
+    ports:
+      - 1080:1080
+      - 1025:1025
+  
+
+  
+volumes:
+  pgadmin:
+
 
 networks:
   keycloak-network-common_ground:
+    driver: bridge
