--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -75,11 +75,34 @@ services:
       - 1080:1080
       - 1025:1025
   
+  mongodb:
+    image: mongo
+    container_name: mongo_common_ground
+    ports:
+      - "27017:27017"
+    volumes:
+      - ./mongo_common_ground:/data/db
+    restart: unless-stopped
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME = mnmr1996development
+      - MONGO_INITDB_ROOT_PASSWORD = mnmr1996development
+
+  mongo-express:
+    image: mongo-express
+    container_name: mongo_express_common_ground
+    restart: unless-stopped
+    ports: 
+      - "7081:8081"
+    environment:
+      - ME_CONFIG_MONGODB_ADMINUSERNAME=mnmr1996development
+      - ME_CONFIG_MONGODB_ADMINPASSWORD=mnmr1996development
+      - ME_CONFIG_MONGODB_SERVER=mongodb
+
+
 
   
 volumes:
   pgadmin:
-
 
 networks:
   keycloak-network-common_ground:
